LSS-1993 "Append" alignment issue on mobile browser

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -305,11 +305,11 @@ button {
   border-radius: 8px;
   cursor: pointer;
 }
-.yesMerge:disabled{
+.yesMerge:disabled {
   cursor: not-allowed;
-background-color: #ccc;
-color: white;
-border-color: white;
+  background-color: #ccc;
+  color: white;
+  border-color: white;
 }
 #submit:disabled {
   color: grey;
@@ -863,7 +863,7 @@ border-color: white;
 .dialogButton {
   min-width: 16px;
   margin: 2px 1px;
-  padding: 2px 6px 0;
+  padding: 0 16px;
   border: none;
   border-radius: 2px;
   color: var(--main-color);
@@ -882,7 +882,6 @@ border-color: white;
   display: flex;
   color: #244550;
   border-radius: 12px;
-  padding: 8px 12px;
   margin: 0 10px !important;
 }
 #loadingText {
@@ -898,8 +897,8 @@ border-color: white;
 @media (max-width: 767px) {
   /* Apply different styles for screens with a maximum width of 767px (typically mobile devices) */
   .toolsBtnText {
-    margin: 0 5px !important;
-    padding: 5px;
+    /* margin: 0 5px !important; */
+    /* padding: 5px; */
     font-size: 16px !important;
   }
   .toolIcon {
@@ -909,15 +908,17 @@ border-color: white;
     width: 70%;
   }
 }
-@media (max-width: 300px) {
-  /* Apply different styles for screens with a maximum width of 767px (typically mobile devices) */
+@media (max-width: 425px) {
+  .toolbarButton {
+    padding: 2px 4px 0;
+  }
   .toolsBtnText {
     margin: 0 2px !important;
-    padding: 2px;
-    font-size: 12px !important;
+    /* padding: 2px; */
+    /* font-size: 12px !important; */
   }
   .toolIcon {
-    width: 10px;
+    width: 15px;
   }
 }
 
@@ -1679,7 +1680,7 @@ dialog :link {
   display: none;
 }
 
-@media all and (max-width: 900px) {
+@media all and (max-width: 1100px) {
   #toolbarViewerMiddle {
     width: 100%;
     display: flex;
